navbar hamburger alignment fixes

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -36,7 +36,7 @@
     border-radius: 0;
 	border: none;
 	margin-bottom: 0;
-    min-height: 72px;
+   // min-height: 72px;
 
     position: relative;
     display: -ms-flexbox;
